--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,6 +1,5 @@
 :root{
-    --main-bg-color: rgb(15, 15, 15)
-    ;
+    --main-bg-color: rgb(15, 15, 15);
     --card-bg-color: hsl(216, 12%, 8%);
     --logo-bg-color: hsl(213, 19%, 18%);
 }
