--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,7 +112,7 @@
     margin-top: 2rem;
 }
 
-.back-side .rating-selected{
+.back-side p{
     padding: 0.6rem 1.5rem;
     margin-top: 3rem;
     border-radius: 5rem;
