--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,5 +1,8 @@
 :root{
     --main-bg-color: rgb(15, 15, 15);
     --card-bg-color: hsl(216, 12%, 8%);
-    --logo-bg-color: hsl(213, 19%, 18%);
+    --neutral-medium-color: hsl(213, 19%, 18%);
+    --neutral-soft-color:hsl(217, 12%, 63%);
+    --primary-color: hsl(25, 97%, 53%);
+    --error-color: rgba(175, 9, 9, 0.767);
 }
