--- a/src/css/style.css
+++ b/src/css/style.css
@@ -135,7 +135,7 @@
 
 .error-message{
     display: none;
-    color: rgba(175, 9, 9, 0.767);
+    color: var(--error-color);
     font-size: 1.6rem;
     margin-top: 3rem;
     background-color: var(--neutral-medium-color);
